--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -4,7 +4,7 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "/blog/logo.png",
+      "src": "/blog/ChristmasLogo.png",
       "sizes": "192x192",
       "type": "image/png"
     }
